--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -164,7 +164,7 @@
                     android:paddingTop="8dp"
                     android:paddingRight="16dp"
                     android:paddingBottom="8dp"
-                    android:inputType="text" />
+                    android:inputType="textUri" />
             </LinearLayout>
 
             <EditText
