--- a/app/src/main/res/layout/activity_videogame_detail.xml
+++ b/app/src/main/res/layout/activity_videogame_detail.xml
@@ -62,6 +62,7 @@
                 android:textColor="@color/teal_700"
                 android:textSize="24sp" />
 
+
             <TextView
                 android:id="@+id/descriptionTextView"
                 android:layout_width="match_parent"
@@ -71,9 +72,86 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginBottom="40dp"
+                android:layout_marginBottom="10dp"
                 android:textColor="@color/teal_200"
                 android:text="@string/description" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+            <TextView
+                android:id="@+id/PriceTextViewDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="1dp"
+                android:layout_marginBottom="5dp"
+                android:textColor="@color/teal_200"
+                android:text="@string/price_form"
+                android:layout_marginLeft="20dp" />
+                <TextView
+                    android:id="@+id/priceEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="5dp"
+                    android:textColor="@color/teal_200"
+                    android:text="@string/price" />
+            </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/PlaceTextViewDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="5dp"
+                android:textColor="@color/teal_200"
+                android:text="@string/place_form" />
+            <TextView
+                android:id="@+id/PlaceTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="5dp"
+                android:textColor="@color/teal_200"
+                android:text="@string/place" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/attendButton"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="3dp"
+                android:background="@drawable/ic_btn_atten"
+                android:gravity="center"
+                android:text="@string/attend"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+            <Button
+                android:id="@+id/organizerButton"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/ic_btn"
+                android:gravity="center"
+                android:text="@string/organizerData"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
